Fixed case sensitive search and modals on smaller res

--- a/assets/css/modals.less
+++ b/assets/css/modals.less
@@ -7,8 +7,13 @@
     background-color: @planner-background;
 }
 
+@media (min-width: 768px) {
+    .card-columns.items {
+        column-count: 1;
+    }
+}
 .card-columns.items {
-    column-count: 2;
+    column-count: 1;
 }
 .compact-item-modals .card-columns.items {
     column-count: 1;
